# MeQTrack_app

./: .gitignore  QUICKSTART.md  README.md  goals.md  goals_v2.md  goals_v3.md  goals_v4.md  goals_v5.md  meqtrack-mvp-requirements.md  meqtrack.bat  meqtrack.command  mvp-plan.md  setup.R
.cursor/: mcp.json
Anno/: README.md
Anno/EPICv2/: EPICv2.typeI.ext.rds
app/: app.R
app/R/: array_detect.R  cnv_module.R  deconv_module.R  dimred_module.R  help_module.R  past_runs_module.R  pipeline_bridge.R  qc_module.R  report_module.R  results_loader.R  run_controller.R  samplesheet_module.R  settings_module.R  theme.R  validators.R  workspace.R
app/www/: meqtrack.css
docs/decisions/: ADR-001-report-approach.md
mcp/: .gitignore  DESIGN.md  README.md  pyproject.toml  setup.sh
mcp/meqtrack_mcp/: __init__.py  config.py  openai_agent.py  pipeline.py  results.py  server.py
mcp/r/: datasets.R  summarize.R  validate.R  write_run_config.R
mcp/tests/: test_smoke.py
pipeline/: .gitignore  README.md  cnv_heatmap.R  command_line.txt  methylation_pipeline.R
pipeline/pipeline_modules/: cnv_analysis.R  config.R  deconvolution.R  dim_reduction.R  filtering.R  hpc.R  preprocess.R  qc.R  (+3 more)
reference/: COMET_Labkey_August_12_2025.csv  GSE140686_sarcoma_methylation_labels.csv  GSE90496_MC_MCF_color_labels_key.csv  GSE90496_color_key_allRef.csv  tSNE_embedding_1915sample_overlap_probesEPICv1andv2.RData  tSNE_embedding_GSE140686_top10K.RData  tSNE_embedding_GSE90496_top10K.RData
renv/: settings.json
scripts/: build_release.sh  run_example.R  submit_hpc_lsf.sh  test_bridge.R
(+4 files in other folders)
