[project]
name = "meqtrack-mcp"
version = "0.1.0"
description = "MCP server that drives the MeQTrack methylation pipeline via chat."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "uvicorn>=0.30",  # serve the streamable-HTTP transport behind the auth gate
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
meqtrack-mcp = "meqtrack_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meqtrack_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
